<resources>
    <string name="app_name">data</string>
    <string name="action_settings">Settings</string>
    <string name="buat_biodata_baru">Buat Biodata</string>
    <string name="nomor">Nomor</string>
    <string name="nama">Nama</string>
    <string name="nrp">NRP</string>
    <string name="simpan">Simpan</string>
    <string name="kembali">Kembali</string>
    <string name="update">Update</string>
</resources>