 <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".CreateDataActivity" >

    <EditText
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNo"
        android:layout_alignStart="@+id/textNo"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:inputType="number"
        android:maxLength="10"
        android:autofillHints=""
        tools:ignore="LabelFor">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nrp"
        android:layout_alignStart="@+id/nrp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="9dp"
        android:text="@string/nama" />

    <EditText
        android:id="@+id/nrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNrp"
        android:layout_alignStart="@+id/textNrp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:maxLength="20"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textNrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no"
        android:layout_alignStart="@+id/no"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/nrp" />

    <TextView
        android:id="@+id/textNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/nomor" />

    <EditText
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNama"
        android:layout_alignStart="@+id/textNama"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:inputType="text"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/nama"
        android:layout_alignRight="@+id/nama"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="373dp"
        android:drawableLeft="@drawable/ic_done"
        android:text="@string/simpan"
        android:background="@drawable/bg_button"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/nama"
        android:layout_alignLeft="@+id/nama"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="78dp"
        android:layout_marginBottom="373dp"
        android:drawableLeft="@drawable/ic_arrow"
        android:text="@string/kembali"
        android:background="@drawable/bg_button2"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>