<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background4"
    tools:context=".ViewDataActivity" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="82dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="577dp"
        android:text="@string/nomor"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="94dp"
        android:layout_marginRight="38dp"
        android:text="@string/nomor"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="78dp"
        android:layout_height="32dp"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="-13dp"
        android:text="@string/nama"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginTop="21dp"
        android:layout_marginRight="1dp"
        android:text="@string/nama"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="22dp"
        android:text="@string/nrp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/nrp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="425dp"
        android:background="@drawable/bg_button2"
        android:drawableLeft="@drawable/ic_arrow"
        android:text="@string/kembali"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>